--- a/mto.Rmd
+++ b/mto.Rmd
@@ -15,6 +15,7 @@ library(tm)
 library(quanteda)
 library(topicmodels)
 library(stopwords)
+library(pattern.nlp)
 library(plotly)
 ```
 
@@ -113,6 +114,58 @@ p1 <- doc_top_terms %>%
   coord_flip()
 ggplotly(p1, width = 900)
 ```
+
+### Sentiment analysis
+```{r}
+str_sub(rawData$L1, 1, 3) <- ""
+str_sub(rawData$Q13_INF, 1, 3) <- ""
+rawData <- rawData %>% arrange(L1)
+rawData$L1 <- as.factor(rawData$L1)
+sentiment <- sapply(rawData[[24]], function(x) pattern_sentiment(x, language = "dutch")[[1]])
+subjectiv <- sapply(rawData[[24]], function(x) pattern_sentiment(x, language = "dutch")[[2]])
+tekst <- sapply(rawData[[24]], function(x) pattern_sentiment(x, language = "dutch")[[3]])
+sentDF <- data.frame(rawData[1:7],tekst, sentiment, subjectiv) %>% filter(tekst != "NA")
+sentDF$opleiding <- substr(sentDF$L1, 1, 2)
+
+grpKlas <- sentDF %>% group_by(L1)
+
+summKlas <- summarise(grpKlas,
+                      n = n(),
+                      mean = mean(sentiment),
+                      sd = sd(sentiment)
+                      ) %>% arrange(mean)
+summKlas
+
+p2 <- ggplot(sentDF, aes(x = L1, y = sentiment, color = opleiding)) + 
+  geom_boxplot() +
+  coord_flip()
+ggplotly(p2, width = 900)
+```
+
+### Plot sentiment
+```{r}
+sentDF$sentiment <- round(sentDF$sentiment, 2)
+
+pal <- rainbow(dim(sentDF)[2]-1)
+f <- list(
+  family = "Courier New, monospace",
+  size = 14,
+  color = "#7f7f7f"
+)
+x <- list(
+  title = "Polariteit (neg / pos)",
+  titlefont = f,
+  range = c(-1, 1)
+)
+y <- list(
+  title = "Subjectiviteit",
+  titlefont = f
+)
+plot_ly(sentDF, x = sentDF$sentiment, y = sentDF$subjectiv, text = paste("Tekst: ", sentDF$tekst), hoverinfo = "text", mode = "markers", marker = list(size = 20), color = sentDF$L1, colors = pal) %>%
+  layout(autosize = F, width = 1000, height = 800, xaxis = x, yaxis = y)
+
+```
+
 
 ### Schrijf data weg
 
